# sicdb_1_pipeline

./: .gitignore  README.md  config.json  create_src_zip.bat  load_concepts.py  profile_execute.prof  pyproject.toml
data_directory/: postgresql.conf
data_directory/base/1/: 2619
data_directory/base/5/: 1259
data_directory/global/: 1262  1262_fsm  1262_vm  2396  2397  2671  2672  config_exec_params  pg_control
data_directory/pg_stat/: pgstat.stat
ddl/: AOMOPCDM_postgresql_5.4_ddl.sql  OMOPCDM_postgresql_5.4_constraints.sql
mapping/: d_references.csv  mapping_sicdb.csv
scripts/: run_cli.py
src/sicdb_1_pipeline/: __init__.py  __main__.py  cli.py  config.py
src/sicdb_1_pipeline/commands/: check.py  execute.py  init_db.py
src/sicdb_1_pipeline/db/: admin.py  connection.py  schema.py  util.py
src/sicdb_1_pipeline/pipeline/: __init__.py  drug.py  person.py
src/sicdb_1_pipeline/runtime/: __init__.py  progress.py  status.py
src/sicdb_1_pipeline/shared/: ast.py  shared.py
src/sicdb_1_pipeline/unittests/: __init__.py  unittest_preexecution.py
