[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sicdb-1-pipeline"
version = "0.1.0"
description = "Python CLI ETL pipeline for SIC database workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SICDB Pipeline" }]
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
sicdb-pipeline = "sicdb_1_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
